--- a/notebooks/template.ipynb
+++ b/notebooks/template.ipynb
@@ -1,106 +1,99 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "%load_ext dotenv\n",
-    "%dotenv\n",
-    "\n",
-    "import os\n",
-    "\n",
-    "%cd {os.getenv(\"PROJECT_PATH\") or \".\"}\n",
-    "\n",
-    "%load_ext autoreload\n",
-    "%autoreload 1\n",
-    "\n",
-    "from IPython.display import display\n"
-   ]
+  "cells": [
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": true
+      },
+      "outputs": [],
+      "source": [
+        "%load_ext dotenv\n",
+        "%dotenv\n",
+        "\n",
+        "import os\n",
+        "\n",
+        "%cd {os.getenv(\"PROJECT_ROOT\") or \"..\"}\n",
+        "\n",
+        "%load_ext autoreload\n",
+        "%autoreload 1\n",
+        "\n",
+        "from IPython.display import display\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": false
+      },
+      "outputs": [],
+      "source": [
+        "import logging\n",
+        "\n",
+        "import pandas as pd\n",
+        "\n",
+        "logging.basicConfig(level=logging.INFO)\n",
+        "logger = logging.getLogger(__name__)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from pandarallel import pandarallel\n",
+        "\n",
+        "pandarallel.initialize(\n",
+        "    nb_workers=os.cpu_count(),\n",
+        "    progress_bar=True,\n",
+        "    verbose=0\n",
+        ")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": false
+      },
+      "outputs": [],
+      "source": [
+        "def show_df(df: pd.DataFrame):\n",
+        "    display(df.head())\n",
+        "    print(df.shape)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": false
+      },
+      "outputs": [],
+      "source": []
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 2
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython2",
+      "version": "2.7.6"
+    }
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "import sys\n",
-    "from pathlib import Path\n",
-    "from absl import logging\n",
-    "from tqdm.notebook import tqdm\n",
-    "from timeit import default_timer as timer\n",
-    "import pickle\n",
-    "\n",
-    "logging.set_verbosity(logging.INFO)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pandarallel import pandarallel\n",
-    "\n",
-    "pandarallel.initialize(\n",
-    "    nb_workers=os.cpu_count(),\n",
-    "    progress_bar=True,\n",
-    "    verbose=0\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "def show_df(df: pd.DataFrame):\n",
-    "    display(df.head())\n",
-    "    print(df.shape)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 0
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
