feat: working on training gpt

--- a/notebooks/load_owt.ipynb
+++ b/notebooks/load_owt.ipynb
@@ -2,19 +2,11 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "collapsed": true
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "/data05/home/gary.wei/projects/evagpt\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "%load_ext dotenv\n",
         "%dotenv\n",
@@ -31,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "collapsed": false
       },
@@ -47,7 +39,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import tensorflow as tf\n",
+        "\n",
+        "tf.config.set_visible_devices([], \"GPU\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -62,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "collapsed": false
       },
@@ -75,97 +78,81 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "collapsed": false
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "INFO:datasets:JAX version 0.7.2 available.\n",
-            "INFO:httpx:HTTP Request: HEAD https://huggingface.co/datasets/Skylion007/openwebtext/resolve/main/README.md \"HTTP/1.1 307 Temporary Redirect\"\n",
-            "INFO:httpx:HTTP Request: HEAD https://huggingface.co/api/resolve-cache/datasets/Skylion007/openwebtext/b4325f019c648b1641a1784748667e8b74e5e064/README.md \"HTTP/1.1 200 OK\"\n",
-            "INFO:httpx:HTTP Request: HEAD https://huggingface.co/datasets/Skylion007/openwebtext/resolve/b4325f019c648b1641a1784748667e8b74e5e064/openwebtext.py \"HTTP/1.1 404 Not Found\"\n",
-            "INFO:httpx:HTTP Request: HEAD https://s3.amazonaws.com/datasets.huggingface.co/datasets/datasets/Skylion007/openwebtext/Skylion007/openwebtext.py \"HTTP/1.1 404 Not Found\"\n",
-            "INFO:httpx:HTTP Request: GET https://huggingface.co/api/datasets/Skylion007/openwebtext/revision/b4325f019c648b1641a1784748667e8b74e5e064 \"HTTP/1.1 200 OK\"\n",
-            "INFO:httpx:HTTP Request: HEAD https://huggingface.co/datasets/Skylion007/openwebtext/resolve/b4325f019c648b1641a1784748667e8b74e5e064/.huggingface.yaml \"HTTP/1.1 404 Not Found\"\n",
-            "INFO:httpx:HTTP Request: GET https://datasets-server.huggingface.co/info?dataset=Skylion007/openwebtext \"HTTP/1.1 200 OK\"\n",
-            "INFO:httpx:HTTP Request: GET https://huggingface.co/api/datasets/Skylion007/openwebtext/tree/b4325f019c648b1641a1784748667e8b74e5e064/plain_text?recursive=true&expand=false \"HTTP/1.1 200 OK\"\n",
-            "INFO:httpx:HTTP Request: GET https://huggingface.co/api/datasets/Skylion007/openwebtext/tree/b4325f019c648b1641a1784748667e8b74e5e064?recursive=false&expand=false \"HTTP/1.1 200 OK\"\n"
-          ]
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "c71cb8a121f2407c8304ac25da00f1bd",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Resolving data files:   0%|          | 0/80 [00:00<?, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "INFO:httpx:HTTP Request: HEAD https://huggingface.co/datasets/Skylion007/openwebtext/resolve/b4325f019c648b1641a1784748667e8b74e5e064/dataset_infos.json \"HTTP/1.1 404 Not Found\"\n"
-          ]
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "70c5f81d802a4866af2c4aa386bd1d89",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Resolving data files:   0%|          | 0/80 [00:00<?, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "31842866003a423cb3699798cdf2ef18",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Loading dataset shards:   0%|          | 0/80 [00:00<?, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "text/plain": [
-              "DatasetDict({\n",
-              "    train: Dataset({\n",
-              "        features: ['text'],\n",
-              "        num_rows: 8013769\n",
-              "    })\n",
-              "})"
-            ]
-          },
-          "execution_count": 5,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "import datasets\n",
         "\n",
-        "ds = datasets.load_dataset(\"Skylion007/openwebtext\")\n",
-        "ds"
+        "ds = datasets.load_from_disk(\"data/processed/owt_gpt2_bs1024\")\n",
+        "logger.info(f\"Loaded dataset with {len(ds)} records.\")\n",
+        "\n",
+        "ds\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import evagpt.data.utils\n",
+        "\n",
+        "train_loader, _ = evagpt.data.utils.get_dataloader(\n",
+        "    dataset=ds[\"train\"],\n",
+        "    batch_size=64,\n",
+        "    shuffle=True,\n",
+        ")\n",
+        "train_loader"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "for batch in train_loader:\n",
+        "    print(batch[\"input_ids\"].shape)\n",
+        "    break"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%aimport evagpt.gpt2\n",
+        "import jax.random as jrandom\n",
+        "\n",
+        "import evagpt.gpt2\n",
+        "\n",
+        "rng = jrandom.PRNGKey(0)\n",
+        "config = evagpt.gpt2.GPT2Config()\n",
+        "\n",
+        "rng, key_model = jrandom.split(rng)\n",
+        "model = evagpt.gpt2.GPT2(config, key=key_model)\n",
+        "\n",
+        "model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import equinox as eqx\n",
+        "import jax\n",
+        "\n",
+        "devices = jax.devices()\n",
+        "\n",
+        "replicated_model = eqx.filter_jit(\n",
+        "    lambda m: jax.device_put_replicated(m, devices)\n",
+        ")(model)\n"
       ]
     },
     {
@@ -192,7 +179,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.14.2"
+      "version": "3.13.11"
     }
   },
   "nbformat": 4,
